samples/_failures_safe/1761720574_b6056c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_925a4fe8.c: In function ‘main’:
./samples/SAFE/__tmp_925a4fe8.c:115:5: error: expected declaration or statement at end of input
  115 |     printf("Total entries: %d\n", stack_count + heap_count);
      |     ^~~~~~
